# dxgi-nvenc-demo

./: .gitignore  CMakeLists.txt  README.md  RESEARCH.md  build.bat
src/: d3d11_renderer.cpp  d3d11_renderer.h  dda_capture.cpp  dda_capture.h  frame_queue.h  main.cpp  nvdec_decoder.cpp  nvdec_decoder.h  nvenc_encoder.cpp  nvenc_encoder.h  perf_stats.h  qsv_encoder.cpp  qsv_encoder.h
